--- a/style.css
+++ b/style.css
@@ -3,9 +3,11 @@ body {
     margin: 0;
     padding: 0;
     line-height: 1.6;
+    color: #333;
+    background-color: #f4f4f4;
 }
 
-header, footer {
+header {
     background-color: #333;
     color: white;
     text-align: center;
@@ -15,30 +17,42 @@ header, footer {
 nav {
     background-color: #444;
     padding: 0.5em 0;
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
     text-align: center;
 }
 
-nav a {
-    color: white;
+nav ul li {
+    display: inline;
     margin: 0 15px;
+}
+
+nav ul li a {
+    color: white;
     text-decoration: none;
+    font-weight: bold;
 }
 
-nav a:hover {
+nav ul li a:hover {
     text-decoration: underline;
-}
-
-section {
-    padding: 20px;
-}
-
-h2 {
-    color: #333;
 }
 
 .container {
     width: 80%;
     margin: 0 auto;
+    padding: 20px;
+    background: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 20px;
+}
+
+h2 {
+    color: #333;
+    border-bottom: 2px solid #333;
+    padding-bottom: 0.5em;
 }
 
 .team-member {
@@ -47,12 +61,34 @@ h2 {
 
 .team-member h3 {
     margin: 0;
+    color: #444;
+}
+
+.team-member p {
+    margin: 0.5em 0 0;
+    color: #666;
+}
+
+ul {
+    list-style-type: disc;
+    margin-left: 20px;
 }
 
 a {
     color: #0066cc;
+    text-decoration: none;
 }
 
 a:hover {
     text-decoration: underline;
+}
+
+footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 1em 0;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
