--- a/style.css
+++ b/style.css
@@ -16,7 +16,16 @@ header {
 
 nav {
     background-color: #444;
-    padding: 0.5em 0;
+    box-sizing: border-box;
+    border-bottom: 1px solid #dddddd;
+    left: 0px;
+    overflow-y: auto;
+    padding:30px;
+    position: fixed;
+    text-align: center;
+    top: 0px;
+    width: 100%;
+    z-index: 999;
 }
 
 nav ul {
@@ -34,6 +43,13 @@ nav a {
     color: white;
     text-decoration: none;
     font-weight: bold;
+    display: inline-block;
+    font-family: 'Raleway', sans-serif;
+    font-size: 16px;
+    font-weight: 300;
+    letter-spacing: 2px;
+    padding: 10px 40px;
+    text-transform: uppercase;
 }
 
 nav a:hover {
