--- a/style.css
+++ b/style.css
@@ -102,12 +102,12 @@ ul {
     margin-left: 20px;
 }
 
-a {
+.report a {
     color: #0066cc;
     text-decoration: none;
 }
 
-a:hover {
+.report a:hover {
     text-decoration: underline;
 }
 
