--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ ul {
     text-decoration: underline;
 }
 
-footer {
+.footer {
     background-color: #333;
     color: white;
     text-align: center;
