--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+html {
+    position:relative;
+    min-height:100%;
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -5,6 +10,7 @@ body {
     line-height: 1.6;
     color: #333;
     background-color: #f4f4f4;
+    padding-bottom:100px;
 }
 
 .navigation {
