--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ html {
 
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     line-height: 1.6;
     color: #333;
     background-color: #f4f4f4;
@@ -28,15 +28,11 @@ body {
 }
 
 .navigation ul {
-    list-style: none;
-    padding: 0;
-    text-align: center;
+    padding: 0px;
 }
 
 .navigation a {
     color: white;
-    text-decoration: none;
-    font-weight: bold;
     display: inline-block;
     font-family: 'Raleway', sans-serif;
     font-size: 16px;
@@ -46,7 +42,7 @@ body {
     text-transform: uppercase;
 }
 
-nav a:hover {
+.navigation a:hover {
     text-decoration: underline;
 }
 
