--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Raleway', sans-serif;
     margin: 0px;
     padding: 0px;
     line-height: 1.6;
@@ -29,6 +29,7 @@ body {
 
 .navigation ul {
     padding: 0px;
+    margin: 0px;
 }
 
 .navigation a {
@@ -76,6 +77,7 @@ body {
     background: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
+    padding: 10px;
 }
 
 h2 {
