REMOVED LI IN NAV

--- a/style.css
+++ b/style.css
@@ -33,10 +33,6 @@ body {
     list-style: none;
 }
 
-.navigation li {
-    display: inline;
-}
-
 .navigation a {
     color: white;
     display: inline-block;
@@ -88,17 +84,6 @@ body {
     padding: 10px;
 }
 
-h1 {
-    color: #222;
-    font-family: 'Raleway', sans-serif;
-    font-size: 60px;
-    font-weight: 100;
-    letter-spacing: 2px;
-    margin: 0;
-    text-align: center;
-    text-transform: uppercase;
-}
-
 h2 {
     color: #333;
     border-bottom: 2px solid #333;
@@ -106,7 +91,7 @@ h2 {
     font-family: 'Amatic SC', sans-serif;
     font-size: 30px;
     margin: 0;
-    text-align: center;
+    text-align: right;
     text-transform: uppercase;
 }
 
