--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body {
     height: 400px;
     position: relative;
     text-align: center;
-    margin-top: 60px; /* Adjusted spacing to prevent overlap */
+    margin-top: 60px;
     width: 100%;
     padding: 10px;
 }
@@ -76,6 +76,7 @@ body {
 }
 
 .container {
+    margin-top: 60px;
     width: 80%;
     margin: 20px auto;
     padding: 20px;
