--- a/style.css
+++ b/style.css
@@ -111,6 +111,8 @@ p {
 .team-member h3 {
     margin: 0;
     color: #444;
+    font-family: 'Raleway', sans-serif;
+    text-transform: uppercase;
 }
 
 .team-member p {
