--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ body {
     position: relative;
     font-family: "Bradley Hand";
     font-size: 35px;
+    color: antiquewhite;
 }
 
 .container {
@@ -92,7 +93,7 @@ h2 {
     font-family: 'Amatic SC', sans-serif;
     font-size: 30px;
     margin: 0;
-    text-align: right;
+    text-align: left;
     text-transform: uppercase;
 }
 
