--- a/style.css
+++ b/style.css
@@ -72,7 +72,8 @@ body {
     position: relative;
     font-family: "Bradley Hand";
     font-size: 35px;
-    color: #f4f4f4;
+    color: #222;
+    margin: 20px;
 }
 
 h1 {
