--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ body {
     background-size: cover;
     border-bottom: 10px solid #dddddd;
     height: 400px;
+    color: #222;
     position: relative;
     text-align: center;
     margin-top: 60px;
