--- a/style.css
+++ b/style.css
@@ -97,7 +97,11 @@ h1 {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 30px;
     border: 50px;
-    overflow: scroll;
+}
+
+.container,
+img {
+    object-fit: contain;
 }
 
 h2 {
