--- a/style.css
+++ b/style.css
@@ -97,11 +97,10 @@ h1 {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 30px;
     border: 50px;
-    object-fit: contain;
 }
 
-.container,
-img {
+.container.img {
+    width: 80%;
     object-fit: contain;
 }
 
