--- a/style.css
+++ b/style.css
@@ -80,6 +80,11 @@ body {
     opacity: 1;
 }
 
+.banner-text h1 {
+    font-family: 'Amatic SC', sans-serif !important;
+    font-weight: 400;
+}
+
 h1 {
     color: #000;
     font-family: "Sacramento";
