--- a/style.css
+++ b/style.css
@@ -158,6 +158,11 @@ ul {
     color: orange;
 }
 
+.diagram p{
+    font-style: italic;
+    font-size: 12px;
+    text-align: center;
+}
 .footer {
     background-color: #333;
     color: #f4f4f4;
